# terminus-store-wasm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md
.github/: pull_request_template.md
.github/workflows/: benchmark.yml  coverage.yml  other_platforms.yml  test.yml
src/: lib.rs  opfs_helpers.js
src/layer/: builder.rs  id_map.rs  layer.rs  simple_builder.rs
src/layer/internal/: base.rs  base_merge.rs  child.rs  mod.rs  object_iterator.rs  predicate_iterator.rs  subject_iterator.rs
src/logging/: logging.rs
src/storage/: archive.rs  cache.rs  consts.rs  copy.rs  delta.rs  directory.rs  file.rs  fs_persistence.rs  label.rs  layer.rs  locking.rs  memory.rs  memory_persistence.rs  mod.rs  new_memory.rs  opfs_persistence.rs  opfs_tests.rs  pack.rs  persistence.rs  persistence_store.rs
src/store/: mod.rs  sync.rs
tests/opfs/: README.md  helper.js  index.html  run.sh  run_headless.js  run_tests.js  server.js  worker.js
