[package]
name = "terminus-store-wasm"
version = "0.21.5"
authors = ["Matthijs van Otterdijk <matthijs@datachemist.com>"]
edition = "2021"
license = "Apache-2.0"
description = "a triple store library"
homepage = "https://terminusdb.com"
repository = "https://github.com/terminusdb/terminusdb-store"
documentation = "https://docs.rs/terminus-store/"
exclude = [".gitignore", ".github/", "/ci/"]
autoexamples = false

[features]
eprint_log = []

[dependencies]
byteorder = "1.5.0"
bytes = "1.11.1"
rand = "0.10.0"
tar = "0.4.44"
flate2 = "1.1.9"
thiserror = "2.0.18"
itertools = "0.14.0"
lru = "0.16.3"
bitvec = "1.0.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
tdb-succinct-wasm = { version = "0.1.2", git="https://github.com/likelion/tdb-succinct-wasm", branch="main"}
#tdb-succinct-wasm = { path = "../tdb-succinct-wasm" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemRemoveOptions",
] }

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3.27.0"
